--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,45 @@
     <title>Who dis?</title>
   </head>
 
+  <style>
+    .hide {
+      visibility: hidden;
+    }
+    #loading {
+      width: 100%;
+      height:  100%;
+      position: absolute;
+      background: #DDDDDDDD;
+    }
+    .lds-dual-ring {
+      display: inline-block;
+      width: 80px;
+      height: 80px;
+    }
+    .lds-dual-ring:after {
+      content: " ";
+      display: block;
+      width: 64px;
+      height: 64px;
+      margin: 50%;
+      border-radius: 50%;
+      border: 6px solid #fff;
+      border-color: #fff transparent #fff transparent;
+      animation: lds-dual-ring 1.2s linear infinite;
+    }
+    @keyframes lds-dual-ring {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+  </style>
+
   <body>
+    <div id="loading" class="hide lds-dual-ring"></div>
     <h1>Who is this?</h1>
 
     <pre id="response"></pre>
@@ -15,46 +53,56 @@
 
   <script src="/js/face-api.js"></script>
   <script type="text/javascript">
-  let ready = true;
   let labeledFaceDescriptors;
 
   let file = document.querySelector("#analyze");
   let codeBlock = document.querySelector("#response");
 
   const loadImage = () => {  
-    if (!ready) {
-      alert("Models and configuration not loaded yet, please wait a minute");
-      return;
-    }
     let canvas = document.querySelector("canvas");
     let ctx = canvas.getContext("2d");
 
     let reader = new FileReader();
+
     reader.onload = function(event){
-        let img = new Image();
-        img.onload = async function(){
-          let imageRatio = img.width / img.height;
-          canvas.height = 500;
-          canvas.width = 500 * imageRatio;
-          ctx.drawImage(img, 0, 0, img.width, img.height, 0, 0, canvas.width, canvas.height);
-          let input = img;
-          let imgData = canvas.toDataURL();
-          const response = await fetch("/detection", {
-            method: 'POST', 
-            headers: {
-              'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({imgData})
-          }).then(resp => resp.json());
-          codeBlock.innerText = JSON.stringify(response, null, 2);
-        }
-        img.src = event.target.result;
+      // Show loading overlay
+      document.querySelector("#loading").classList.remove("hide");
+
+      // Create an image that will be drawn on the canvas
+      let img = new Image();
+      img.onload = async function(){
+        // Resize the image
+        let imageRatio = img.width / img.height;
+        canvas.height = 500;
+        canvas.width = 500 * imageRatio;
+
+        // Draw on canvas
+        ctx.drawImage(img, 0, 0, img.width, img.height, 0, 0, canvas.width, canvas.height);
+
+        // Convert into base64 and POST to server
+        let imgData = canvas.toDataURL();
+        const response = await fetch("/detection", {
+          method: 'POST', 
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({imgData})
+        }).then(resp => resp.json());
+
+        // Output the response to the PRE block
+        codeBlock.innerText = JSON.stringify(response, null, 2);
+        document.querySelector("#loading").classList.add("hide");
+      }
+      img.src = event.target.result;
     }
+
+    // Trigger the reader onload event when an image is selected.
     if (file) {
       reader.readAsDataURL(file.files[0]);
     } 
   }
 
+  // When a file is selected, loadImage()
   file.addEventListener("change", loadImage);
 
   </script>
